added Draw button

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                     <input type="text" class="thickness-separator-k">
                     <input type="text" class="purlin-distance">
                     <span class="Purling-breacing-distance">PBD</span>
-                    <button type="button">Add</button>
-                    <button type="button">Clear</button>
+                    <button type="button" class="add">Add</button>
+                    <button type="button" class="clear">Clear</button>
+                    <button type="button" class="draw">Draw</button>
             </div>
             
             
